# loguruEverywhere

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
EverLoguru.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ever_loguru/: handler.py  install.py  mask.py  wrapper.py
