[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EverLoguru"
version = "1.1.3"
authors = [
    { name = "Cyan", email = "lc_shizuku@outlook.com" }
]
description = "Loguru all over the world. | 全世界都在用 Lo~guru~~"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Chinese-Cyq20100313/loguruEverywhere"
"Bug Tracker" = "https://github.com/Chinese-Cyq20100313/loguruEverywhere/issues"
